# federal-bill-statistics

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
fbs/: logger.py
fbs/commands/: build_site.py  calculate_stats.py  parse_bills.py  render_all_bills.py  render_bill.py
fbs/commands/migrations/: add_num_characters.py
fbs/render/: bill.py
fbs/sources/govinfo/: govinfo_parser.py  govinfo_prompts.py  govinfo_source.py
scripts/: build_complete.sh  build_incremental.sh
static/: NOTICES.txt  markdown.css  style.css  tailwind.css
static/js/: ti.js
templates/: _base.html.j2  about.html.j2  bill_details.html.j2  index.html.j2  privacy.html.j2  tailwind.css
