[tool.poetry]
name = "federal-bill-statistics"
version = "0.1.0"
description = ""
authors = ["ALEA Institute <hello@aleainstitute.ai>"]
readme = "README.md"
license = "CC-BY-4.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
alea-llm-client = "^0.1.2"
alea-preprocess = "^0.1.12"
httpx = {extras = ["http2"], version = "^0.28.1"}
lxml = "^5.3.0"
spacy = {extras = ["cuda12x"], version = "^3.8.3"}
jinja2 = "^3.1.4"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
